--- a/config_pnp.yaml
+++ b/config_pnp.yaml
@@ -6,14 +6,16 @@ output_path: 'PNP-results/horse'
 # data
 image_path: 'data/horse.jpg'
 latents_path: 'latents_forward'
+frequency_mask_ratio: 0.5
 
 # diffusion
 sd_version: '2.1'
 guidance_scale: 7.5
 n_timesteps: 50
-prompt: a photo of a pink toy horse on the beach
+prompt:  a polygonal illustration of a cat and a bunny
 negative_prompt: ugly, blurry, black, low res, unrealistic
 
 # pnp injection thresholds, ∈ [0, 1]
 pnp_attn_t: 0.5
 pnp_f_t: 0.8
+
